--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="row gap-5">
                 <div class="card-1">
                      <div class="img-tiv">
-                    <img src="img/logo.svg" class="tiv" alt="">
+                    <img src="img/logo.svg" class="tiv1" alt="">
                 </div>
                 <h3 class="h3">Grande mosquée de Tivaouane</h3>
                 <a href="https://grandemosqueetivaouane.com/" target="_blank"><button class="bn632-hover bn21">Voir le site</button></a>
@@ -27,7 +27,7 @@
                
                 <div class="card-2">
                     <div class="img-tiv">
-                        <img src="img/images.png" class="tiv" alt="">
+                        <img src="img/images.png" class="tiv2" alt="">
                     </div>
                     <h3 class="h3">Siraaj de Tivaouane</h3>
                     <a href="https://as-siraaj.com/" target="_blank"><button class="bn632-hover bn21">Voir le site</button></a>
